CREATE TABLE USUARIO (
    ID_USUARIO INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRES VARCHAR(80) NOT NULL,
    APELLIDOS VARCHAR(80) NOT NULL,
    CORREO VARCHAR(120) NOT NULL UNIQUE,
    FECHA_REGISTRO TIMESTAMP NOT NULL,
    SALARIO_MENSUAL_BASE DECIMAL(18,2) NOT NULL,
    ESTADO_USUARIO VARCHAR(20) NOT NULL,
    CREADO_POR INTEGER,
    MODIFICADO_POR INTEGER,
    CREADO_EN TIMESTAMP NOT NULL,
    MODIFICADO_EN TIMESTAMP
);
CREATE TABLE CATEGORIA (
    ID_CATEGORIA INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ID_USUARIO INTEGER,
    NOMBRE_CATEGORIA VARCHAR(60) NOT NULL,
    DESCRIPCION_CATEGORIA VARCHAR(150),
    TIPO_CATEGORIA VARCHAR(20) NOT NULL,
    ICONO VARCHAR(50),
    COLOR_HEX VARCHAR(7),
    ORDEN_UI INTEGER NOT NULL,
    CREADO_POR INTEGER,
    MODIFICADO_POR INTEGER,
    CREADO_EN TIMESTAMP NOT NULL,
    MODIFICADO_EN TIMESTAMP
);
CREATE TABLE SUBCATEGORIA (
    ID_SUBCATEGORIA INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ID_CATEGORIA INTEGER NOT NULL,
    NOMBRE_SUBCATEGORIA VARCHAR(60) NOT NULL,
    DESCRIPCION_SUBCATEGORIA VARCHAR(150),
    ACTIVA BOOLEAN NOT NULL,
    ES_DEFECTO BOOLEAN NOT NULL,
    CREADO_POR INTEGER,
    MODIFICADO_POR INTEGER,
    CREADO_EN TIMESTAMP NOT NULL,
    MODIFICADO_EN TIMESTAMP
);
CREATE TABLE PRESUPUESTO (
    ID_PRESUPUESTO INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ID_USUARIO INTEGER NOT NULL,
    NOMBRE_PRESUPUESTO VARCHAR(100) NOT NULL,
    ANIO_INICIO INTEGER NOT NULL,
    MES_INICIO INTEGER NOT NULL,
    ANIO_FIN INTEGER NOT NULL,
    MES_FIN INTEGER NOT NULL,
    TOTAL_INGRESOS_PLANIFICADOS DECIMAL(18,2) NOT NULL,
    TOTAL_GASTOS_PLANIFICADOS DECIMAL(18,2) NOT NULL,
    TOTAL_AHORRO_PLANIFICADO DECIMAL(18,2) NOT NULL,
    FECHA_CREACION TIMESTAMP NOT NULL,
    ESTADO_PRESUPUESTO VARCHAR(20) NOT NULL,
    CREADO_POR INTEGER,
    MODIFICADO_POR INTEGER,
    CREADO_EN TIMESTAMP NOT NULL,
    MODIFICADO_EN TIMESTAMP
);
CREATE TABLE PRESUPUESTO_DETALLE (
    ID_DETALLE INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ID_PRESUPUESTO INTEGER NOT NULL,
    ID_SUBCATEGORIA INTEGER NOT NULL,
    MONTO_MENSUAL_ASIGNADO DECIMAL(18,2) NOT NULL,
    OBSERVACIONES VARCHAR(200),
    CREADO_POR INTEGER,
    MODIFICADO_POR INTEGER,
    CREADO_EN TIMESTAMP NOT NULL,
    MODIFICADO_EN TIMESTAMP,
    UNIQUE (ID_PRESUPUESTO, ID_SUBCATEGORIA)
);
CREATE TABLE OBLIGACION_FIJA (
    ID_OBLIGACION INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ID_USUARIO INTEGER NOT NULL,
    ID_SUBCATEGORIA INTEGER NOT NULL,
    NOMBRE_OBLIGACION VARCHAR(100) NOT NULL,
    DESCRIPCION_OBLIGACION VARCHAR(200),
    MONTO_FIJO_MENSUAL DECIMAL(18,2) NOT NULL,
    DIA_VENCIMIENTO INTEGER NOT NULL,
    VIGENTE BOOLEAN NOT NULL,
    FECHA_INICIO DATE NOT NULL,
    FECHA_FINALIZACION DATE,
    CREADO_POR INTEGER,
    MODIFICADO_POR INTEGER,
    CREADO_EN TIMESTAMP NOT NULL,
    MODIFICADO_EN TIMESTAMP
);
CREATE TABLE TRANSACCION (
    ID_TRANSACCION INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ID_USUARIO INTEGER NOT NULL,
    ID_PRESUPUESTO INTEGER NOT NULL,
    ANIO INTEGER NOT NULL,
    MES INTEGER NOT NULL,
    ID_SUBCATEGORIA INTEGER NOT NULL,
    ID_OBLIGACION INTEGER,
    TIPO_TRANSACCION VARCHAR(20) NOT NULL,
    DESCRIPCION VARCHAR(200) NOT NULL,
    MONTO DECIMAL(18,2) NOT NULL,
    FECHA DATE NOT NULL,
    METODO_PAGO VARCHAR(30) NOT NULL,
    NUM_FACTURA VARCHAR(40),
    OBSERVACIONES VARCHAR(200),
    FECHA_REGISTRO TIMESTAMP NOT NULL,
    CREADO_POR INTEGER,
    MODIFICADO_POR INTEGER,
    CREADO_EN TIMESTAMP NOT NULL,
    MODIFICADO_EN TIMESTAMP
);

