
Table USUARIO {
  id_usuario int [pk]
  nombres varchar(80) [not null]
  apellidos varchar(80) [not null]
  correo varchar(120) [not null, unique]
  fecha_registro timestamp [not null]
  salario_mensual_base decimal(15,2) [not null]
  estado_usuario varchar(20) [not null]
  creado_por int
  modificado_por int
  creado_en timestamp [not null]
  modificado_en timestamp
}

Table PRESUPUESTO {
  id_presupuesto int [pk]
  id_usuario int [not null]
  nombre_presupuesto varchar(100) [not null]
  anio_inicio smallint [not null]
  mes_inicio smallint [not null]
  anio_fin smallint [not null]
  mes_fin smallint [not null]
  total_ingresos_planificados decimal(15,2) [not null]
  total_gastos_planificados decimal(15,2) [not null]
  total_ahorro_planificado decimal(15,2) [not null]
  fecha_creacion timestamp [not null]
  estado_presupuesto varchar(20) [not null]
  creado_por int
  modificado_por int
  creado_en timestamp [not null]
  modificado_en timestamp
}

Table CATEGORIA {
  id_categoria int [pk]
  id_usuario int
  nombre_categoria varchar(60) [not null]
  descripcion_categoria varchar(150)
  tipo_categoria varchar(20) [not null]
  icono varchar(50)
  color_hex varchar(7)
  orden_ui smallint [not null]
  creado_por int
  modificado_por int
  creado_en timestamp [not null]
  modificado_en timestamp
}

Table SUBCATEGORIA {
  id_subcategoria int [pk]
  id_categoria int [not null]
  nombre_subcategoria varchar(60) [not null]
  descripcion_subcategoria varchar(150)
  activa boolean [not null]
  es_defecto boolean [not null]
  creado_por int
  modificado_por int
  creado_en timestamp [not null]
  modificado_en timestamp
}

Table PRESUPUESTO_DETALLE {
  id_detalle int [pk]
  id_presupuesto int [not null]
  id_subcategoria int [not null]
  monto_mensual_asignado decimal(15,2) [not null]
  observaciones varchar(200)
  creado_por int
  modificado_por int
  creado_en timestamp [not null]
  modificado_en timestamp

  indexes {
    (id_presupuesto, id_subcategoria) [unique]
  }
}

Table OBLIGACION_FIJA {
  id_obligacion int [pk]
  id_usuario int [not null]
  id_subcategoria int [not null]
  nombre_obligacion varchar(100) [not null]
  descripcion_obligacion varchar(200)
  monto_fijo_mensual decimal(15,2) [not null]
  dia_vencimiento smallint [not null]
  vigente boolean [not null]
  fecha_inicio date [not null]
  fecha_finalizacion date
  creado_por int
  modificado_por int
  creado_en timestamp [not null]
  modificado_en timestamp
}

Table TRANSACCION {
  id_transaccion int [pk]
  id_usuario int [not null]
  id_presupuesto int [not null]
  anio smallint [not null]
  mes smallint [not null]
  id_subcategoria int [not null]
  id_obligacion int
  tipo_transaccion varchar(20) [not null]
  descripcion varchar(200) [not null]
  monto decimal(15,2) [not null]
  fecha date [not null]
  metodo_pago varchar(30) [not null]
  num_factura varchar(40)
  observaciones varchar(200)
  fecha_registro timestamp [not null]
  creado_por int
  modificado_por int
  creado_en timestamp [not null]
  modificado_en timestamp

  indexes {
    (id_presupuesto, anio, mes)
    (id_subcategoria, anio, mes)
    (id_usuario, anio, mes)
  }
}

Ref: USUARIO.id_usuario < PRESUPUESTO.id_usuario
Ref: USUARIO.id_usuario < CATEGORIA.id_usuario
Ref: CATEGORIA.id_categoria < SUBCATEGORIA.id_categoria
Ref: PRESUPUESTO.id_presupuesto < PRESUPUESTO_DETALLE.id_presupuesto
Ref: SUBCATEGORIA.id_subcategoria < PRESUPUESTO_DETALLE.id_subcategoria
Ref: USUARIO.id_usuario < OBLIGACION_FIJA.id_usuario
Ref: SUBCATEGORIA.id_subcategoria < OBLIGACION_FIJA.id_subcategoria
Ref: USUARIO.id_usuario < TRANSACCION.id_usuario
Ref: PRESUPUESTO.id_presupuesto < TRANSACCION.id_presupuesto
Ref: SUBCATEGORIA.id_subcategoria < TRANSACCION.id_subcategoria
Ref: OBLIGACION_FIJA.id_obligacion < TRANSACCION.id_obligacion